--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express-session": "^1.17.2",
     "express-slow-down": "^1.4.0",
     "express-validator": "^6.14.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
