--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-router-dom": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
