--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-flash": "^0.0.2",
     "express-rate-limit": "^6.3.0",
     "express-session": "^1.17.2",
     "express-slow-down": "^1.4.0",
